@@ -5,6 +5,7 @@ po4a (0.15.4-2) UNRELEASED; urgency=low
     to follow GNU usage.
   * As told in section 3.1 of the Perl policy, man pages must be installed
     under section 3pm, not 3perl.
+  * In debian/rules, the pods target now calls local scripts.
 
  -- Denis Barbier <barbier@debian.org>  Wed, 26 Nov 2003 20:40:16 +0100
 
